# sj-project

./: CHANGELOG.md  README.md  input.txt  sj-project.cabal
.devcontainer/: devcontainer.json
.devcontainer/library-scripts/: common-debian.sh
app/: Common.hs  LexicalAnalyzer.hs  Main.hs  SyntacticAnalyzer.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
